--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>xlogo4schools-core</module>
+        <module>xlogo4schools-allinonejar</module>
     </modules>
 
 
