--- a/xlogo4schools-core/pom.xml
+++ b/xlogo4schools-core/pom.xml
@@ -43,39 +43,6 @@
             <version>1.6.2</version>
         </dependency>
 
-
-
-        <!--
-            <dependency>
-            <groupId>org.scijava</groupId>
-            <artifactId>j3dcore</artifactId>
-            <version>1.6.0-scijava-2</version>
-        </dependency>
-
-            <dependency>
-                <groupId>org.scijava</groupId>
-                <artifactId>j3dutils</artifactId>
-                <version>1.6.0-scijava-2</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.scijava</groupId>
-                <artifactId>vecmath</artifactId>
-                <version>1.6.0-scijava-2</version>
-            </dependency>
-            -->
-        <!--
-        <dependency>
-            <groupId>java3d</groupId>
-            <artifactId>j3d-core</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>java3d</groupId>
-            <artifactId>j3d-core-utils</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>javazoom</groupId>
             <artifactId>jlayer</artifactId>
@@ -123,60 +90,18 @@
             </testResource>
         </testResources>
 
-
         <plugins>
-
-            <!--
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-dependency-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>copy-dependencies</id>
-                                    <phase>prepare-package</phase>
-                                    <goals>
-                                        <goal>copy-dependencies</goal>
-                                    </goals>
-                                    <configuration>
-                                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                                        <overWriteReleases>false</overWriteReleases>
-                                        <overWriteSnapshots>false</overWriteSnapshots>
-                                        <overWriteIfNewer>true</overWriteIfNewer>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-jar-plugin</artifactId>
-                            <configuration>
-                                <archive>
-                                    <manifest>
-                                        <addClasspath>true</addClasspath>
-                                        <classpathPrefix>lib/</classpathPrefix>
-                                        <mainClass>xlogo.Logo</mainClass>
-                                    </manifest>
-                                </archive>
-                            </configuration>
-                        </plugin>
-            -->
-
-
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <finalName>${project.artifactId}-${project.version}-executable</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>xlogo.Logo</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
