Added maven module installing the java3d 1.6.2 files into the local maven repository as those are not available from maven central

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>java3d-install</module>
         <module>xlogo4schools-core</module>
         <module>xlogo4schools-allinonejar</module>
+
     </modules>
 
 
