--- a/xlogo4schools-core/pom.xml
+++ b/xlogo4schools-core/pom.xml
@@ -28,19 +28,19 @@
 
 
         <dependency>
-            <groupId>harrison.j3d</groupId>
+            <groupId>xlogo4schools</groupId>
             <artifactId>j3dcore</artifactId>
-            <version>1.6.2</version>
+            <version>1.6.2-harrison</version>
         </dependency>
         <dependency>
-            <groupId>harrison.j3d</groupId>
+            <groupId>xlogo4schools</groupId>
             <artifactId>j3dutils</artifactId>
-            <version>1.6.2</version>
+            <version>1.6.2-harrison</version>
         </dependency>
         <dependency>
-            <groupId>harrison.j3d</groupId>
+            <groupId>xlogo4schools</groupId>
             <artifactId>vecmath</artifactId>
-            <version>1.6.2</version>
+            <version>1.6.2-harrison</version>
         </dependency>
 
         <dependency>
